--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,20 @@
-server.port = 8081
+server.port = 8080
 
 #SIN DOCKER
-#spring.datasource.url=jdbc:mysql://localhost:3308/db
-#spring.datasource.username=root
-#spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3308/db
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
 
 
 #DOCKER
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url = ${DB_URL}
+#spring.datasource.dbname = ${DB_NAME}
+#spring.datasource.username = ${DB_USERNAME}
+#spring.datasource.password = ${DB_PASSWORD}
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.use-new-id-generator-mappings = false
+
+spring.jpa.properties.hibernate.format_sql=true
