--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port = 8090
 
 #SIN DOCKER
-spring.datasource.url=jdbc:mysql://localhost:3308/db
+spring.datasource.url=jdbc:mysql://mysql-db:3306/db
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -13,7 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.username = ${DB_USERNAME}
 #spring.datasource.password = ${DB_PASSWORD}
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.use-new-id-generator-mappings = false
 
